# ourdigest-telegram-bot

./: .gitignore  README.md  pyproject.toml
ops/ourdigest-telegram-bot/: install_runtime_venv.sh  ourdigest-telegram-bot.service
src/ourdigest_telegram_bot/: __init__.py  bot.py  digest.py  formatter.py
tests/: test_digest.py  test_formatter.py  test_news_args.py
