[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ourdigest-telegram-bot"
version = "0.1.0"
description = "Minimal Telegram bot for ourdigest - /news returns the latest AI/LLM digest."
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.4",
    "httpx>=0.27",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[project.scripts]
ourdigest-telegram-bot = "ourdigest_telegram_bot.bot:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ourdigest_telegram_bot"]
